name:                regions-example
version:             0.1.0.0
synopsis:            A minimal example on how to use the `regions` package
-- description:         
homepage:            https://github.com/expipiplus1/regions-example
license:             MIT
license-file:        license
author:              Joe Hermaszewski
maintainer:          joe@monoid.al
category:            Control
build-type:          Simple
cabal-version:       >=1.10

executable regions-example
  main-is:             Example.hs
  other-extensions:    FlexibleContexts
  build-depends:       base >=4.7 && <4.8, transformers, regions >=0.12 && <0.13
  default-language:    Haskell2010
